# jimi-superstar

./: .gitignore  Cargo.toml  README.md
.agent/workflows/: m1nd-first.md
apps/jimi-cockpit/: README.md
apps/jimi-server/: Cargo.toml
apps/jimi-server/src/: main.rs  provider_adapter.rs  provider_auth.rs
apps/jimi-server/static/: cockpit.html
crates/jimi-kernel/: Cargo.toml
crates/jimi-kernel/src/: capability.rs  durable.rs  event.rs  fieldvault.rs  ids.rs  lib.rs  mandala.rs  runtime.rs  session.rs  slot.rs
data/: m1nd-graph.json
docs/architecture/: README.md
docs/roadmap/: IMPLEMENTATION-STAGES.md
docs/specs/: CAPSULE-MEMORY-ARCHITECTURE.md  CRUSH-TO-JIMI-MEMORY-DONOR-MAP.md  JIMI-CAPSULE-RUNTIME-MARKETPLACE-BLUEPRINT.md  JIMI-CONTROL-PLANE-UI.md  JIMI-OVERVISION-WORLD-STATE.md  MANDALA-CAPSULE-MODEL.md  MANDALA-FIELDVAULT-STEERING.md  README.md  RETROBUILDER-CHAT-UIX.md  RETROBUILDER-HANDOFF.md  RETROBUILDER-MACRO-UIX.md  RETROBUILDER.md  ROUND-2-ARCHITECTURE.md
