[workspace]
members = [
  "crates/jimi-kernel",
  "apps/jimi-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["max kle1nz <kleinz@m1nd.world>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
