[package]
name = "jimi-kernel"
version = "0.1.0"
edition = "2024"
description = "Core runtime types for ANOMALY"
license = "MIT"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
m1nd-core.workspace = true
